--- a/src/index.css
+++ b/src/index.css
@@ -4,30 +4,13 @@ Client INDEX CSS | Greenlist Registry (a full-stack sustainable material forum a
 */
 
 
-/* FONT INITS 
+/* FONT INITS
 font-family: 'Lato', sans-serif;
 font-family: 'Alegreya Sans', sans-serif;
 */
-@font-face {
-  font-family: 'Lato';
-  src: url('./assets/fonts/Lato/Lato-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Raleway';
-  src: url('./assets/fonts/Raleway/Raleway-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-
 
 body {
-  margin: 0;
-  font-family: 'Lato', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  font-size: 100%;
+  padding: 30px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
