--- a/src/Components/NavigationBar.css
+++ b/src/Components/NavigationBar.css
@@ -1,16 +1,62 @@
+.container-navbar {
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  
+  width: 725px;
+}
+
+.container-logo {
+  flex-direction: row-reverse;
+}
+
+.image-logo {
+  height: 70px;
+  margin: 22px 3px 11px 3px;
+}
+
 .btn-primary {
     color: black; 
     background-color: white; 
-   border-color: white;
+    border-color: white;
 } 
 
-.navigationBar{
-    display: grid;
-    grid-template-columns: repeat(5,130px);
-    justify-content: center;
-    align-items: center;
+ul.j-navbar {
+  position: relative;
+  border-bottom: solid 1px #ddd;
+  /* padding-bottom: 3px; */
+  margin-bottom: 3px;
 }
 
+.j-navbar li {
+    min-width: 145px;
+    min-height: 28px;
+    /* border: solid 1px #000; */
+    padding: 6px 3px;
+    margin: 0px;
+
+    text-align: center;
+}
+
+.j-navbar #nav-dropdown {
+  padding: 0px;
+}
+
+.j-navbar .dropdown {
+  z-index: 20;
+}
+
+.j-navbar a:link, .j-navbar a:visited {
+  z-index: 20;
+
+  font-family: 'Montserrat', sans-serif;
+  font-size: 0.9em;
+  font-weight: normal;
+  text-transform: uppercase;
+  text-decoration: none;
+
+  color: #000;
+}
 
 .dropdown-menu{
   margin: 0px 0 0;
@@ -20,4 +66,16 @@
   color: black;
     background-color: white;
     border-color: white;
+}
+
+.j-navbar li#active-slide {
+  position: absolute;
+  top: 1px;
+  z-index: 10;
+  transition-property: opacity, transform;
+  transition-duration: 1s,  0.22s;
+  background: rgb(255,255,255);
+  background: linear-gradient(180deg, rgba(255,255,255,1) 47%, rgba(210,240,255,1) 100%);
+  border-bottom: solid 1px #000;
+  transform: translateX(0px);
 }
