--- a/src/Components/NavigationBar.css
+++ b/src/Components/NavigationBar.css
@@ -58,6 +58,10 @@ ul.j-navbar {
   color: #000;
 }
 
+.j-navbar a:hover, .j-navbar a:active {
+  color: #888;
+}
+
 .dropdown-menu{
   margin: 0px 0 0;
 }
@@ -79,3 +83,48 @@ ul.j-navbar {
   border-bottom: solid 1px #000;
   transform: translateX(0px);
 }
+
+/* ul.j-navbar--sub {
+  position: relative;
+  /* border-bottom: solid 1px #ddd; */
+  /* padding-bottom: 3px;
+  margin-bottom: 3px;
+}
+
+.j-navbar--sub li {
+    min-width: 145px;
+    min-height: 28px;
+    /* border: solid 1px #000;
+    padding: 6px 3px;
+    margin: 0px;
+
+    text-align: center;
+}
+
+.j-navbar--sub a:link, .j-navbar--sub a:visited {
+  z-index: 20;
+
+  font-family: 'Montserrat', sans-serif;
+  font-size: 0.9em;
+  font-weight: normal;
+  text-transform: uppercase;
+  text-decoration: none;
+
+  color: #000;
+}
+
+.j-navbar--sub a:hover, .j-navbar--sub a:active {
+  color: #888;
+}
+
+.j-navbar--sub li#active-slide {
+  position: absolute;
+  top: 1px;
+  z-index: 10;
+  transition-property: opacity, transform;
+  transition-duration: 1s,  0.22s;
+  background: rgb(255,255,255);
+  background: linear-gradient(180deg, rgba(255,255,255,1) 47%, rgba(210,240,255,1) 100%);
+  border-bottom: solid 1px #000;
+  transform: translateX(0px);
+} */
