--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ em {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Catamaran", sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 900;
 }
 
