--- a/src/Components/ReclaimedForm.css
+++ b/src/Components/ReclaimedForm.css
@@ -4,59 +4,67 @@ Client Reclaimed Form CSS | Greenlist Registry (a full-stack sustainable materia
 */
 
 
-.form--addreclaim {
-    align-items: flex-end;
-
-    margin: 0 auto;
-    width: 60%;
+form.add-reclaim {
+    width: 725px;
+    grid-template-columns: max-content auto;
+    /* grid-template-rows:  */
+    align-items: flex-start;
 }
 
-.form--addreclaim .form-row {
-    width: 100%;
-    justify-content: flex-end;
-    margin-bottom: 11px;
+form.add-reclaim input[type="file"] {
+    background-color: #fff;
 }
 
-.form--addreclaim label {
-    margin-top: 3px;
+.add-reclaim label {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    min-height: 42px;
+    padding-top: 6px;
 }
 
-.form--addreclaim input, .form--addreclaim select, .form--addreclaim textarea {
+/* .add-reclaim .el-box {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    /* min-height: 42px;
+    padding-top: 6px;
+} */
+
+/* .j-form input, .j-form select, .j-form textarea {
     margin-left: 2%;
 }
 
-.form--addreclaim input[type="text"], .form--addreclaim input[type="number"], .form--addreclaim select {
+.j-form input[type="text"], .j-form input[type="number"], .j-form select {
     height: 2.2em;
 }
 
-.form--addreclaim input, .form--addreclaim textarea {
+.j-form input, .j-form textarea {
     border-radius: 5px;
     border-style: inset;
     border-width: 2px;
     padding: 2px 6px;
-}
+} */
 
-.form--addreclaim select {
+.j-form select {
     width: 23%;
-}
-
-.form--addreclaim input[type="text"], .form--addreclaim textarea {
-    width: 76%;
 }
 
 .input-body {
     height: 110px;
 }
 
-.form--addreclaim input[type="number"] {
+.j-form input[type="number"] {
     width: 51%;
 }
 
-.form--addreclaim button {
-    margin-top: 11px;
-}
-
-.form--addreclaim p.msg--error {
+.j-form p.msg--error {
     text-align: right;
     white-space: pre-line;
 
