style lists on main

--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@ h2 { /* SECTION TITLES */
   margin: 2px 3px 22px 0px;
 }
 
-h3.resourcer--name {
+h3.card--name {
   font-size: 1.3em;
   color: #fff;
   text-shadow: 0px 2px 3px #000;
