--- a/src/Components/NewList.css
+++ b/src/Components/NewList.css
@@ -23,7 +23,7 @@ a.j-card:hover, a.j-card:active {
     color: #000;
 }
 
-.resourcer--card:hover, .resourcer--card:active {
+.all--card:hover, .all--card:active {
     background-color: rgba(255,255,255,0.4);
 }
 
