--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,12 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 900;
 }
 
+h1.profile--name {
+  font-size: 2em;
+  color: #fff;
+  text-shadow: 0px 2px 3px #000;
+}
+
 h2 { /* SECTION TITLES */
   font-size: 1.8em;
   margin: 2px 3px 22px 0px;
@@ -75,6 +81,14 @@ h3.card--name {
   text-shadow: 0px 2px 3px #000;
 }
 
+h4.sub--name {
+  color: #000;
+}
+
+h5 {
+  font-size: 1.3em;
+  margin: 55px 3px 11px 3px;
+}
 
 /* HELPERS */
 .j-flex-column {
