--- a/src/Components/Resourcer.css
+++ b/src/Components/Resourcer.css
@@ -3,9 +3,18 @@
 } */
 
 .productPic {
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     object-fit: cover;
-    margin-left: auto;
+    margin-right: 22px;
     border-radius: 5px;
+}
+
+.product-link:link, product-link:visited {
+    color: #000;
+}
+
+.product-link:hover, product-link:active {
+    color: #000;
+    text-decoration: none;
 }
