--- a/src/Components/Creator.css
+++ b/src/Components/Creator.css
@@ -34,7 +34,7 @@
 .profile-avatar {
     width: 300px;
     height: 300px;
-    object-fit: cover;
+    object-fit: contain;
     margin-left: auto;
     border-radius: 5px;
 }
